--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -88,15 +88,27 @@
 		  -ms-user-select: none;
 		  user-select: none;
 		}
+		
+		#lp_mgz9Dtl { font-size: 12px; }
     </style>
     
     <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    
+    
     
 </head>
 
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 	<div class="wrap">
 		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
+		
+		<script>
+		if (isMobile == true) {
+			//$(".text-huge").css("font-size", "18px");
+		}
+		</script>	
+		
+    
 		<div class="body-wrap coll-mobile">
 			
 			<div class="contents">
@@ -157,9 +169,6 @@
 
 <script type="text/javascript">      
 
-
-
-
 /* 파일업로드 */
 $(document).ready(function(){
 	
@@ -177,10 +186,7 @@ $(document).ready(function(){
         $(this).siblings('.upload-name').val(filename);
     });
 	
-	
-	
 }); 
-
 
 /*
  * MGZ9 목록 조회
@@ -241,8 +247,6 @@ $(document).ready(function(){
  var params = new URLSearchParams(paramMz9);
   
  var getParam= params.get('mgzSq');
-  
- console.log("getParam :"+getParam);
  
  if(getParam !="" && getParam != null){
 	selectMgz9Dtl(getParam);
@@ -263,7 +267,7 @@ $(document).ready(function(){
   		},
           success: function(data) {
           	var mgzDtl = null;
-          	console.log(data);
+          	
           	if(data.result != null){
           		
               	var mgzContent = data.result.mgzContent; 
@@ -454,7 +458,7 @@ $(document).ready(function(){
  
 </script>
     
-	
+
 	
 	
 	
