--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -89,7 +89,9 @@
 		  user-select: none;
 		}
 		
-		#lp_mgz9Dtl { font-size: 12px; }
+		/* #lp_mgz9Dtl { font-size: 12px; } */
+		
+
     </style>
     
     <link rel="icon" type="image/png" href="resources/img/favicon.png">
@@ -103,9 +105,13 @@
 		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		
 		<script>
-		if (isMobile == true) {
-			//$(".text-huge").css("font-size", "18px");
-		}
+		$(document).ready(function () {
+			if (isMobile == true) {
+				$("#lp_mgz9Dtl").css("font-size", "2.0em");
+				$(".text-huge").css("font-size", "1.2em");
+				
+			}	  
+		});	
 		</script>	
 		
     
