--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -261,7 +261,7 @@
 										</td>
 									</tr>
 									<tr>
-										<th><span class="my-red">작품 상태</span></th>
+										<th><span class="">작품 상태</span></th>
 										<td><input type="text" class="input-4" id="workState" th:value="${result.work.workState}"/></td>
 									</tr>
 									<tr>
