insight border 삭제

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -314,7 +314,7 @@
 					
 					<div class="swiper mySwiperIn" >
 						
-						<div class="swiper-wrapper" id="mainInsights" style="border: #ececec 2px solid">
+						<div class="swiper-wrapper" id="mainInsights">
 						
 						</div>
 						
