--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -977,6 +977,7 @@
 $(function() {
 	if(sMbrSqVal == null || sMbrSqVal == ""){
 		modalAlertShow("로그인 후 이용하실 수 있습니다.", "main");
+		return;
 	}
 });
 $('.selectpicker').selectpicker();
