--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -760,10 +760,10 @@ function feeCal(){
 		stopDealCount();
 	}else{
 		var gap = dday - today;
-	  	var day = Math.ceil(gap / (1000 * 60 * 60 * 24));
-	  	var hour = Math.ceil((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-	  	var min = Math.ceil((gap % (1000 * 60 * 60)) / (1000 * 60));
-	  	var sec = Math.ceil((gap % (1000 * 60)) / 1000);
+	  	var day = Math.floor(gap / (1000 * 60 * 60 * 24));
+	  	var hour = Math.floor((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+	  	var min = Math.floor((gap % (1000 * 60 * 60)) / (1000 * 60));
+	  	var sec = Math.floor((gap % (1000 * 60)) / 1000);
 	  	element.innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
 	}
 }, 1000);
