--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -766,10 +766,10 @@ var dealCount = setInterval(function() {
 			divElements[i].style.display = "none";
 		}else{
 			var gap = dday - today;
-			var day = Math.ceil(gap / (1000 * 60 * 60 * 24));
-			var hour = Math.ceil((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60) - 1);
-			var min = Math.ceil((gap % (1000 * 60 * 60)) / (1000 * 60));
-			var sec = Math.ceil((gap % (1000 * 60)) / 1000);
+			var day = Math.floor(gap / (1000 * 60 * 60 * 24));
+			var hour = Math.floor((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60) - 1);
+			var min = Math.floor((gap % (1000 * 60 * 60)) / (1000 * 60));
+			var sec = Math.floor((gap % (1000 * 60)) / 1000);
 			elements[i].textContent = day + " 일 " + hour + " : " + min + " : " + sec;
 		}
 	  	//document.getElementById("dealCount").innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
