--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -1252,7 +1252,7 @@ var biddingInterval = setInterval(function() {
 	}
   	var gap = dday - today;
   	var day = Math.floor(gap / (1000 * 60 * 60 * 24));
-  	var hour = Math.floor((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60) - 1);
+  	var hour = Math.floor((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
   	var min = Math.floor((gap % (1000 * 60 * 60)) / (1000 * 60));
   	var sec = Math.floor((gap % (1000 * 60)) / 1000);
   	
