작가회원 홍보영상 추가

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -325,7 +325,7 @@ $(function() {
 		artstInfoHtml += '	<dt>인터뷰영상</dt>';
 		artstInfoHtml += '	<dd>';
 		if(artstInfo.artistInfo.artstPromtnVideoUrl != null && artstInfo.artistInfo.artstPromtnVideoUrl != ""){
-			artstInfoHtml += '        <p><a href = "'+ artstInfo.artistInfo.artstPromtnVideoUrl +'">'+ artstInfo.artistInfo.artstPromtnVideoUrl +' </a></p>';
+			artstInfoHtml += '        <p><a href = "'+ artstInfo.artistInfo.artstPromtnVideoUrl +'" target="_blank">'+ artstInfo.artistInfo.artstPromtnVideoUrl +' </a></p>';
 		}
 		artstInfoHtml += '	</dd>';
 		artstInfoHtml += '</dl>';
